--- a/src/styles/blocks/container.scss
+++ b/src/styles/blocks/container.scss
@@ -8,14 +8,11 @@
 
   @include onTablet {
     max-width: 690px;
+    padding: 0 34px;
   }
   
   @include onDesktop {
     max-width: 1280px;
-    padding: 0 40px 35px;
-
-    &--no-paddings {
-      padding: 0;
-    }
+    padding: 0 55px;
   }
 }
