--- a/src/styles/blocks/logo.scss
+++ b/src/styles/blocks/logo.scss
@@ -4,6 +4,17 @@
   font-size: 30px;
   line-height: 30px;
   text-decoration: none;
-  text-align: center;
   color: #0f0e08;
+
+  margin-top: 9px;
+
+  @include onTablet {
+    text-align: center;
+    margin-top: 15px;
+  }
+
+  @include onDesktop {
+    text-align: center;
+    margin-top: 15px;
+  }
 }
