fixed landing page

--- a/src/styles/blocks/_footer.scss
+++ b/src/styles/blocks/_footer.scss
@@ -43,6 +43,30 @@
     gap: 34px;
   }
 
+  &__facebook {
+    background-image: url(../images/Facebook.svg);
+    width: 12px;
+    height: 24px;
+    transition: transform 0.3s;
+
+    &:hover {
+      transition: 0.3s;
+      background-image: url(../images/facebook-hover.svg);
+    }
+  }
+
+  &__instagram {
+    background-image: url(../images/instagram.svg);
+    width: 24px;
+    height: 24px;
+    transition: transform;
+
+    &:hover {
+      transition: 0.3s;
+      background-image: url(../images/instagram-hover.svg);
+    }
+  }
+
   &__contacts {
     @extend %text-schadule;
   }
