--- a/src/styles/blocks/_icon.scss
+++ b/src/styles/blocks/_icon.scss
@@ -7,27 +7,13 @@
     background-image: url(../images/menu.svg);
     height: 12px;
     width: 18px;
+    @include hover(scale, 1.2);
   }
 
   &--cross {
-    background-image: url(../images/cross.svg);
+    background-image: url(../images/cross-1.svg);
     height: 13px;
     width: 13px;
     @include hover(scale, 1.2);
   }
-
-  &--facebook {
-    background-image: url(../images/Facebook.svg);
-    width: 12px;
-    height: 24px;
-    @include hover(fill, $c-orange);
-  }
-
-  &--instagram {
-    background-image: url(../images/instagram.svg);
-    width: 24px;
-    height: 24px;
-    @include hover(fill, $c-orange);
-  }
-
 }
