--- a/src/styles/blocks/_logo.scss
+++ b/src/styles/blocks/_logo.scss
@@ -2,5 +2,11 @@
   &__image {
     width: 55px;
     height: 61px;
+
+    transition: transform 0.3s;
+
+    &:hover {
+      transform: scale(105%);
+    }
   }
 }
