Alpplied all styles requests

--- a/src/styles/blocks/museum.scss
+++ b/src/styles/blocks/museum.scss
@@ -90,6 +90,11 @@
     box-sizing: border-box;
     text-decoration: none;
     border: 1px solid $colorGreen;
+    transition: transform 0.3s;
+
+    &:hover {
+      transform: scale(1.05);
+    }
 
     @include onTablet {
       margin: 0;
@@ -147,6 +152,7 @@
     @include onDesctop {
       display: block;
       position: relative;
+      text-decoration: none;
       writing-mode: vertical-lr;
       transform: translateY(-45px) rotate(-180deg);
 
@@ -154,6 +160,11 @@
       font-size: 14px;
       line-height: 100%;
       color: #687480;
+      transition: font-size 0.3s;
+
+      &:hover {
+        font-size: 16px;
+      }
 
       &::before {
         content: "";
