--- a/src/styles/blocks/menu.scss
+++ b/src/styles/blocks/menu.scss
@@ -75,6 +75,13 @@
     line-height: 100%;
     text-decoration: none;
     color: #fff;
+    padding-bottom: 2px;
+    border-bottom: 1px solid transparent;
+    transition: border-bottom 0.3s;
+
+    &:hover {
+      border-bottom: 1px solid #fff;
+    }
   }
 
   &__schedule {
