--- a/src/styles/blocks/icon.scss
+++ b/src/styles/blocks/icon.scss
@@ -9,6 +9,23 @@
     background-image: url("../images/menu.svg");
   }
 
+  &__close {
+    display: none;
+    background-image: url("../images/close-menu.svg");
+
+    @include onTablet {
+      display: block;
+    }
+
+    &--mobile {
+      background-image: url("../images/close-menu.svg");
+
+      @include onTablet {
+        display: none;
+      }
+    }
+  }
+
   &:hover {
     transform: scale(1.15);
   }
