--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -8,3 +8,7 @@
 @import "blocks/icon.scss";
 @import "blocks/logo.scss";
 @import "blocks/button.scss";
+@import "blocks/menu.scss";
+@import "blocks/nav.scss";
+@import "blocks/work-time.scss";
+@import "blocks/line.scss";
