Section events was added

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -11,4 +11,7 @@
 @import "blocks/menu.scss";
 @import "blocks/nav.scss";
 @import "blocks/work-time.scss";
+@import "blocks/events.scss";
+@import "blocks/show.scss";
+@import "blocks/lecture.scss";
 @import "blocks/line.scss";
