--- a/src/styles/utils/_mixins.scss
+++ b/src/styles/utils/_mixins.scss
@@ -14,3 +14,14 @@
   width: $size;
   height: $size;
 }
+
+@mixin photo-hover {
+  &:hover {
+    transform: scale(1.02);
+
+    box-shadow: 0 1px 4px rgba(0, 0, 0, 0.3),
+      -23px 0 20px -23px rgba(0, 0, 0, 0.6),
+      23px 0 20px -23px rgba(0, 0, 0, 0.6),
+      inset 0 0 40px rgba(0, 0, 0, 0.1);
+  }
+}
