--- a/src/styles/blocks/container.scss
+++ b/src/styles/blocks/container.scss
@@ -10,4 +10,12 @@
   @include onDesktop {
     padding: 0;
   }
+
+  &-swipper {
+    padding-left: 20px;
+
+    @include onTablet {
+      padding-left: 34px;
+    }
+  }
 }
