--- a/src/styles/blocks/page.scss
+++ b/src/styles/blocks/page.scss
@@ -25,6 +25,18 @@
     @include onDesktop {
       margin: 200px 0 -102px;
     }
+
+    &-gallery {
+      margin: 100px 0;
+
+      @include onTablet {
+        margin: 88px 0 92px;
+      }
+
+      @include onDesktop {
+        margin: 200px 0;
+      }
+    }
   }
 
   &__title {
