--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -14,4 +14,6 @@
 @import "blocks/events.scss";
 @import "blocks/show.scss";
 @import "blocks/lecture.scss";
+@import "blocks/gallery.scss";
+@import "blocks/swiper.scss";
 @import "blocks/line.scss";
