Section subscription was added

--- a/src/styles/blocks/button.scss
+++ b/src/styles/blocks/button.scss
@@ -9,6 +9,11 @@
   background-color: $c-green;
   fill: $c-white;
 
+  &--orange {
+    background-color: $c-orange;
+    fill: $c-true-black;
+  }
+
   @include onTablet {
     min-width: $size-btn-big;
     min-height: $size-btn-big;
