--- a/src/styles/blocks/page.scss
+++ b/src/styles/blocks/page.scss
@@ -57,6 +57,16 @@
     @include onDesktop {
       margin-bottom: 56px;
     }
+
+    &--white {
+      color: $c-white;
+      text-align: center;
+      margin-bottom: 20px;
+
+      @include onTablet {
+        margin-bottom: 16px;
+      }
+    }
   }
 
   &__menu {
