--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -16,4 +16,6 @@
 @import "blocks/lecture.scss";
 @import "blocks/gallery.scss";
 @import "blocks/swiper.scss";
+@import "blocks/subscription.scss";
+@import "blocks/form.scss";
 @import "blocks/line.scss";
