--- a/src/styles/blocks/button.scss
+++ b/src/styles/blocks/button.scss
@@ -33,7 +33,8 @@
   }
 
   &__container {
-    margin-left: 20px;
+    margin: 0 auto;
+    width: max-content;
 
     @include onTABS {
       margin-left: 0;
