--- a/src/styles/blocks/return.scss
+++ b/src/styles/blocks/return.scss
@@ -6,6 +6,7 @@
     font-weight: 400;
     font-size: 28px;
     line-height: 100%;
+    white-space: nowrap;
     color: #0f0e08;
     margin-bottom: 10px;
 
@@ -18,8 +19,8 @@
 
     @include  onDesktop {
       font-weight: 400;
-      font-size: 36px;
-      line-height: 100%;
+      font-size: 32px;
+      line-height: 90%;
       margin-bottom: 15px;
       flex-wrap: nowrap;
     }
@@ -80,19 +81,20 @@
   &-point {
     height: 10px;
     width: 10px;
+    align-items: center;
     background-color: #f14a27;
     margin-top: 45px;
 
     @include onTABS {
       height: 15px;
       width: 15px;
-      margin-top: 55px;
+      margin-top: 45px;
     }
 
     @include onDesktop {
       height: 15px;
       width: 15px;
-      margin-top: 55px;
+      margin-top: 45px;
     }
   }
 
