--- a/src/styles/blocks/gallery.scss
+++ b/src/styles/blocks/gallery.scss
@@ -1,5 +1,12 @@
 .gallery {
+
   &__place {
+    display: none;
+
+    @include onTABS {
+      display: none;
+    }
+
     @include onDesktop {
       display: grid;
     }
@@ -8,6 +15,7 @@
   &__photo-container {
     position: relative;
     box-sizing: border-box;
+    overflow: hidden;
 
     width: 100%;
     max-height: 600px;
@@ -32,6 +40,7 @@
   &__photo-containertwo {
     position: relative;
     box-sizing: border-box;
+    overflow: hidden;
 
     width: 100%;
     max-height: 360px;
@@ -75,8 +84,4 @@
     }
   }
 
-  &__tabs {
-    height: 200px;
-    width: 100%;
-  }
 }
