--- a/src/styles/blocks/header.scss
+++ b/src/styles/blocks/header.scss
@@ -9,14 +9,14 @@
 
   @include onTABS {
     background-position: right;
-    background-size: 600px;
+    background-size: 50% 100%;
     height: 390px;
     margin-bottom: 90px;
   }
 
   @include onDesktop {
     background-position: right;
-    background-size: 725px;
+    background-size: 58% 100%;
     height: 655px;
     margin-bottom: 200px;
   }
