--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,74 +1,20 @@
 @import "utils";
 @import "typography";
+@import "./blocks/page.scss";
 @import "./blocks/button.scss";
-
 @import "./blocks/container.scss";
 @import "./blocks/grid.scss";
 @import "./blocks/header.scss";
+@import "./blocks/vertical-text.scss";
 @import "./blocks/icon.scss";
 @import "./blocks/logo.scss";
 @import "./blocks/menu.scss";
 @import "./blocks/schedule.scss";
 @import "./blocks/return.scss";
 @import "./blocks/romanticism.scss";
+@import "./blocks/swiper.scss";
 @import "./blocks/gallery.scss";
 @import "./blocks/subscription.scss";
 @import "./blocks/form.scss";
 @import "./blocks/footer.scss";
-
-.page {
-  font-family: "IBM Plex Sans", sans-serif;
-
-  background: $c-gray;
-  &__body {
-    margin: 0;
-
-    &--with-menu {
-      overflow: hidden;
-    }
-  }
-
-  &__section {
-    margin-bottom: 70px;
-
-    &-title {
-      font-family: "Montserrat", sans-serif;
-      font-weight: 700;
-      font-size: 36px;
-      line-height: 100%;
-      text-align: center;
-      color: #0f0e08;
-
-      @include onTABS {
-        font-weight: 700;
-        font-size: 48px;
-        line-height: 100%;
-        text-align: left;
-      }
-
-      @include onDesktop {
-        font-weight: 700;
-        font-size: 48px;
-        line-height: 100%;
-        text-align: left;
-      }
-    }
-  }
-
-  &__menu {
-    position: fixed;
-    top: 0;
-    left: 0;
-    right: 0;
-
-    transform: translateX(-100%);
-    transition: transform 0.3s;
-    &:target {
-      transform: translateX(0);
-    }
-  }
-}
-
-.top-actions {
-  display: flex;
-}
+@import "./blocks/contact.scss";
