Footer was added

--- a/src/styles/blocks/work-time.scss
+++ b/src/styles/blocks/work-time.scss
@@ -5,7 +5,7 @@
   @include onTablet {
     width: 340px;
   }
-  
+
   @include onDesktop {
     width: 370px;
   }
@@ -29,15 +29,41 @@
       @include onTablet {
         width: 144px;
       }
- 
+
       @include onDesktop {
         width: 170px;
       }
+
+      &--footer {
+        width: 100%;
+
+        @include onTablet {
+          width: 190px;
+        }
+
+        @include onDesktop {
+          width: 100%;
+        }
+      }
+
+      &--footer span {
+        display: block;
+      }
+    }
+
+    &--footer {
+      flex-direction: column;
+      gap: 30px;
     }
   }
 
   &__title {
     font-weight: inherit;
     margin-bottom: 20px;
+  }
+
+  &--footer {
+    width: 100%;
+    color: $c-black;
   }
 }
