--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -18,4 +18,6 @@
 @import "blocks/swiper.scss";
 @import "blocks/subscription.scss";
 @import "blocks/form.scss";
+@import "blocks/footer.scss";
+@import "blocks/contacts.scss";
 @import "blocks/line.scss";
