--- a/src/styles/blocks/line.scss
+++ b/src/styles/blocks/line.scss
@@ -7,5 +7,24 @@
   @include onTablet {
     width: 1px;
     height: 145px;
+    background-color: $c-white;
+    opacity: 0.5;
+  }
+
+  &--footer {
+    width: 100%;
+    height: 1px;
+    margin: 70px 0 40px;
+    background-color: $c-green;
+
+    @include onTablet {
+      margin: 64px 0;
+    }
+
+    @include onDesktop {
+      margin: 0 auto;
+      width: 1px;
+      height: 260px;
+    }
   }
 }
