--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,7 +1,17 @@
-@import "utils";
-@import "fonts";
-@import "typography";
+@import "./utils/mixins";
+@import "./utils/reset";
+@import "./utils/vars";
 
-body {
-  background: $c-gray;
+@import "./blocks/header.scss";
+@import "./blocks/container.scss";
+@import "./blocks/icon.scss";
+@import "./blocks/logo.scss";
+@import "./blocks/page.scss";
+@import "./blocks/menu.scss";
+@import "./blocks/grid.scss";
+@import "./blocks/schedule.scss";
+@import "./blocks/footer.scss";
+
+.main {
+  height: 400px;
 }
