--- a/src/styles/blocks/button.scss
+++ b/src/styles/blocks/button.scss
@@ -24,12 +24,8 @@
   &__img {
     height: 12px;
     width: 8px;
-    padding: 20px;
-
-    @include onTABS {
-      padding: 30px 20px;
-    }
-
+    text-align: center;
+    margin: auto;
   }
 
   &__container {
@@ -41,7 +37,7 @@
     }
 
     @include onDesktop {
-      margin-left: 200px;
+      margin-left: 14%;
     }
   }
 
