--- a/src/styles/blocks/page.scss
+++ b/src/styles/blocks/page.scss
@@ -1,6 +1,6 @@
 .page {
   font-family: "IBM Plex Sans", sans-serif;
-
+  scroll-behavior: smooth;
   background: $c-gray;
   &__body {
     margin: 0;
