--- a/src/styles/blocks/swiper.scss
+++ b/src/styles/blocks/swiper.scss
@@ -1,43 +1,75 @@
-.swiper {
-  width: 100%;
-  height: 100%;
-  margin-bottom: 150px;
-
-  @include onTABS {
-    width: 340px;
-    height: 540px;
-  }
+.slideshow-container {
+  max-width: 100%;
+  margin-bottom: 20px;
 
   @include onDesktop {
     display: none;
   }
+}
 
-  &__bullet {
-    margin: 0 auto;
-    display: flex;
-    justify-content: center;
-    text-align: center;
-    gap: 5px;
-    height: 15px;
-    width: 100px;
+.img_slides {
+  width: 280px;
+  height: 410px;
+  object-fit: cover;
+  object-position: center;
+
+  @include onTABS {
+    width: 340px;
+    height: 543px;
   }
+}
 
-  &__item {
-    height: 12px;
-    width: 12px;
-    border-radius: 50%;
-    background-color: #e0e0e0;
+.mySlides {
+  display: flex;
+}
+
+.dot_item {
+  text-align: center;
+
+  @include onDesktop {
+    display: none;
   }
+}
 
-  &-wrapper {
-    display: flex;
-    gap: 10px;
-    padding-left: 20px;
-    padding-bottom: 20px;
+.dot {
+  cursor: pointer;
+  height: 12px;
+  width: 12px;
+  margin: 0 2px;
+  background-color: #bbb;
+  border-radius: 50%;
+  display: inline-block;
+  transition: background-color 0.6s ease;
+}
 
-    @include onTABS {
-      padding-left: 36px;
-      padding-bottom: 32px;
-    }
+.active,
+.dot:hover {
+  background-color: #717171;
+}
+
+.fade {
+  -webkit-animation-name: fade;
+  -webkit-animation-duration: 1.5s;
+  animation-name: fade;
+  animation-duration: 1.5s;
+}
+
+@-webkit-keyframes fade {
+
+  from {
+    opacity: 0.4;
+  }
+  to {
+    opacity: 1;
+  }
+}
+
+@keyframes fade {
+
+  from {
+    opacity: 0.4;
+  }
+  to {
+    opacity: 1;
   }
 }
