Block Events added

--- a/src/styles/blocks/header.scss
+++ b/src/styles/blocks/header.scss
@@ -1,5 +1,10 @@
 .header {
+  margin-bottom: 400px;
   height: 455px;
+
+  @include onMobile {
+    margin-bottom: 140px;
+  }
 
   &__bg {
     position: absolute;
@@ -74,7 +79,7 @@
     text-transform: uppercase;
     transition: all 0.3s;
 
-    background-image: url(../images/sqauregreen.svg);
+    background-image: url(../images/icongreen40.png);
     background-size: contain;
     background-position: right;
     background-repeat: no-repeat;
