--- a/src/styles/blocks/page.scss
+++ b/src/styles/blocks/page.scss
@@ -25,4 +25,21 @@
       background-color: rgba(0, 0, 0, 0.5);
     }
   }
+
+  &__section-title {
+    margin-bottom: 40px;
+
+    font-family: "Montserrat", sans-serif;
+    font-style: normal;
+    font-weight: 700;
+    font-size: 36px;
+    line-height: 100%;
+    text-align: center;
+    color: $colorBlack;
+
+    @include onDesktop {
+      font-size: 48px;
+      text-align: left;
+    }
+  }
 }
