--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -10,8 +10,5 @@
 @import "./blocks/menu.scss";
 @import "./blocks/grid.scss";
 @import "./blocks/schedule.scss";
+@import "./blocks/event.scss";
 @import "./blocks/footer.scss";
-
-.main {
-  height: 400px;
-}
