--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,7 +1,17 @@
-@import "utils";
-@import "fonts";
-@import "typography";
+@import "./utils/reset";
+@import "./utils/variables";
+@import "./utils/mixins";
 
-body {
-  background: $c-gray;
-}
+@import "./blocks/container.scss";
+@import "./blocks/logo.scss";
+@import "./blocks/grid.scss";
+@import "./blocks/schedule.scss";
+
+@import "./blocks/page.scss";
+@import "./blocks/header.scss";
+@import "./blocks/menu.scss";
+@import "./blocks/events.scss";
+@import "./blocks/lection.scss";
+@import "./blocks/gallery.scss";
+@import "./blocks/subscription.scss";
+@import "./blocks/footer.scss";
