--- a/src/styles/block/subscription.scss
+++ b/src/styles/block/subscription.scss
@@ -95,5 +95,5 @@ input:-webkit-autofill:hover,
 input:-webkit-autofill:focus,
 input:-webkit-autofill:active {
   -webkit-box-shadow: 0 0 0 40px $c-white inset !important;
-  -webkit-text-fill-color: $c-grayd !important;
+  -webkit-text-fill-color: #000 !important;
 }
