--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -13,6 +13,8 @@
 @import "./block/menu.scss";
 @import "./block/schedule.scss";
 @import "./block/tickets.scss";
+@import "./block/text.scss";
+@import "./block/holder.scss";
 @import "./block/events.scss";
 @import "./block/developments.scss";
 @import "./block/classic.scss";
