--- a/src/styles/block/classic.scss
+++ b/src/styles/block/classic.scss
@@ -1,67 +1,32 @@
 .classic {
-  &__block {
-    position: relative;
-    bottom: 60px;
-    padding: 20px 0;
-    display: flex;
-    flex-direction: column;
-    height: 140px;
-    margin: 0 auto;
-    gap: 20px;
-    background-color: $c-white;
-    box-shadow: 0 2px 0 0 $c-darkgreen;
-    width: 280px;
+  position: relative;
+  margin-bottom: 100px;
+  height: 293px;
 
-    @include onTablet {
-      height: 204px;
-      padding: 45px 100px 50px;
-      margin: auto;
-      width: 570px;
-      bottom: 80px;
-    }
+  @include onTablet {
+    margin-bottom: 88px;
+    height: 520px;
 
-    @include onDesktop {
-      bottom: 100px;
-    }
+  }
+
+  @include onDesktop {
+    margin-bottom: 302px;
+    height: 550px;
   }
 
   &__picture {
-    max-height: 390px;
-    width: 100%;
+    position: relative;
+    height: 210px;
+    background-image: url(../images/section2/photo3.png);
+    background-size: cover;
+    background-position: center;
 
     @include onTablet {
-      padding: 0 34px;
+      height: 390px;
     }
 
     @include onDesktop {
-      padding: 0;
-    }
-  }
-
-  &__description {
-    display: flex;
-    align-items: center;
-    justify-content: space-around;
-
-    @include onTablet {
-      justify-content: space-between;
-    }
-  }
-
-  &__name {
-    @extend %name-event;
-  }
-
-  &__date {
-    @extend %date-event;
-  }
-
-  &__title {
-    @extend %event-title;
-    text-align: center;
-
-    @include onTablet {
-      text-align: left;
+      height: 550px;
     }
   }
 }
