--- a/src/styles/blocks/_actual.scss
+++ b/src/styles/blocks/_actual.scss
@@ -1,5 +1,9 @@
 .actual {
 
+  @include onDesktop {
+    margin-bottom: 100px;
+  }
+
   &__img {
     height: 210px;
     background-image: url(../images/actual/img3.png);
