--- a/src/styles/blocks/_card.scss
+++ b/src/styles/blocks/_card.scss
@@ -6,6 +6,8 @@
     margin-bottom: 104px;
   }
   
+  @include hover(transform, scale(1.03));
+
   &__img {
     margin-bottom: 20px;
     height: 210px;
