--- a/src/styles/blocks/_page.scss
+++ b/src/styles/blocks/_page.scss
@@ -1,7 +1,7 @@
 .page {
-  // position: relative;
   max-width: 3000px;
   margin: 0 auto;
+  scroll-behavior: smooth;
 
   &__menu {
     position: absolute;
