--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -5,6 +5,7 @@
 @import "./blocks/button";
 @import "./blocks/container";
 @import "./blocks/header";
+@import "./blocks/nav";
 @import "./blocks/logo";
 @import "./blocks/menu";
 @import "./blocks/page";
@@ -13,3 +14,6 @@
 @import "./blocks/from-to";
 @import "./blocks/gallery";
 @import "./blocks/slider";
+@import "./blocks/subscr";
+@import "./blocks/footer";
+@import "./blocks/contacts-info";
