--- a/src/styles/blocks/_button.scss
+++ b/src/styles/blocks/_button.scss
@@ -1,18 +1,28 @@
 .button {
   display: flex;
-  border: 1px solid $green;
+  box-sizing: border-box;
   width: 280px;
   height: 50px;
+  border: 1px solid $green;
+
+  transition: all 0.5s;
 
   @include onTablet {
     margin-bottom: 20px;
     width: 270px;
-    height: 70px;
+    height: 71px;
   }
 
   @include onDesktop {
     margin-left: 200px;
   }
+
+  &:hover {
+    -webkit-box-shadow: 0px 0px 10px 5px rgba(0,0,0,0.75);
+    -moz-box-shadow: 0px 0px 10px 5px rgba(0,0,0,0.75);
+    box-shadow: 0px 0px 10px 5px rgba(0,0,0,0.75);
+  }
+
 
   &__title {
     display: flex;
@@ -30,6 +40,7 @@
     display: flex;
     width: 50px;
     height: 50px;
+    margin-right: -1px;
     background-color: $green;
     background-image: url(../images/header/button.svg);
     background-position: center;
@@ -37,7 +48,16 @@
 
     @include onTablet {
       width: 70px;
-      height: 70px;
+      height: 70px
+    }
+
+    &--input {
+      background-color: #f14a27;
+      color: #000;
+      background-image: url(../images/button_black.svg);
+
+      @include hover (background-color, $green)
     }
   }
+
 }
