--- a/src/styles/blocks/_from-to.scss
+++ b/src/styles/blocks/_from-to.scss
@@ -12,6 +12,8 @@
 
   transform: translateY(-50%);
 
+  @include hover(transform, scale(1.1) translateY(-50%));
+
   @include onTablet {
     gap: 16px;
     width: 570px;
