--- a/src/styles/blocks/_header.scss
+++ b/src/styles/blocks/_header.scss
@@ -31,6 +31,8 @@
     background-image: url(../images/header/menu.svg);
     background-position: center;
     background-repeat: no-repeat;
+
+    @include hover(transform, scale(1.1))
   }
 
   &__logo {
