--- a/src/styles/blocks/_slider.scss
+++ b/src/styles/blocks/_slider.scss
@@ -1,12 +1,18 @@
 .slider {
+  // position: relative;
   width: 300px;
-  height: 410px;
+  height: 420px;
+
+  @include onDesktop {
+    display: none;
+  }
 
   &__line {
-    position: relative;
     display: flex;
     width: 400%;
-    height: 100%;
+    height: 410px;
+
+    transition: all 0.5s;
   }
 
   &__slide {
@@ -28,6 +34,10 @@
     display: flex;
     width: max-content;
     margin: 0 auto;
+
+    @include onDesktop {
+      display: none;
+    }
   }
 
   &__button {
@@ -39,27 +49,11 @@
     border-radius: 50%;
     cursor: pointer;
 
-    &:target {
+    &:active {
       background-color: #1a5a4c;
     }
 
     @include hover(transform, scale(1.4));
   }
 
-}
-
-#r1:checked ~ .slider__slide {
-  transform: translateX(0);
-}
-
-#r2:checked ~ .slider__slide {
-  transform: translateX(-25%);
-}
-
-#r3:checked ~ .slider__line {
-  transform: translateX(-50%);
-}
-
-#r4:checked ~ .slider__line {
-  transform: translateX(-75%);
 }
