some change was added

--- a/src/styles/blocks/_header.scss
+++ b/src/styles/blocks/_header.scss
@@ -8,6 +8,10 @@
     margin-bottom: 88px;
   }
 
+  @include onDesktop {
+    height: 655px;
+  }
+
   &__nav {
     display: flex;
     align-items: center;
@@ -32,7 +36,7 @@
     background-position: center;
     background-repeat: no-repeat;
 
-    @include hover(transform, scale(1.1))
+    @include hover(transform, scale(1.1));
   }
 
   &__logo {
@@ -90,4 +94,12 @@
     }
   }
 
+  &__link {
+    display: none;
+
+    @include onDesktop {
+      display: block;
+    }
+  }
+  
 }
