--- a/src/styles/blocks/_page.scss
+++ b/src/styles/blocks/_page.scss
@@ -3,6 +3,10 @@
   margin: 0 auto;
   scroll-behavior: smooth;
 
+  &__body--with-menu {
+    overflow: hidden;
+  }
+
   &__menu {
     position: absolute;
     top: 0;
