--- a/src/styles/blocks/_button.scss
+++ b/src/styles/blocks/_button.scss
@@ -18,11 +18,10 @@
   }
 
   &:hover {
-    -webkit-box-shadow: 0px 0px 10px 5px rgba(0,0,0,0.75);
-    -moz-box-shadow: 0px 0px 10px 5px rgba(0,0,0,0.75);
-    box-shadow: 0px 0px 10px 5px rgba(0,0,0,0.75);
+    -webkit-box-shadow: 0 0 10px 5px rgba(0,0,0,0.75);
+    -moz-box-shadow: 0 0 10px 5px rgba(0,0,0,0.75);
+    box-shadow: 0 0 10px 5px rgba(0,0,0,0.75);
   }
-
 
   &__title {
     display: flex;
@@ -48,7 +47,7 @@
 
     @include onTablet {
       width: 70px;
-      height: 70px
+      height: 70px;
     }
 
     &--input {
@@ -56,7 +55,7 @@
       color: #000;
       background-image: url(../images/button_black.svg);
 
-      @include hover (background-color, $green)
+      @include hover (background-color, $green);
     }
   }
 
