--- a/src/styles/blocks/page.scss
+++ b/src/styles/blocks/page.scss
@@ -8,7 +8,7 @@
   scroll-behavior: smooth;
 
   &__body {
-    background-color: #e5e5e5;
+    background-color: #fff;
 
     &--with-menu {
       overflow: hidden;
