Last commit museum after review

--- a/src/styles/blocks/footer.scss
+++ b/src/styles/blocks/footer.scss
@@ -215,6 +215,7 @@
 
     border: 1px solid #1a5a4c;
     border-radius: 50%;
+    background-color: #fff;
     cursor: pointer;
 
     @include onTablet {
