some problem was fixed

--- a/src/styles/blocks/_menu.scss
+++ b/src/styles/blocks/_menu.scss
@@ -1,6 +1,11 @@
 .menu {
+  z-index: 1;
   background-color: $green;
   padding: 27px 0;
+
+  &:target {
+    overflow: background-color rgba(0,0,0,0.7);
+  }
 
   @include onTablet {
     padding: 40px 0;
