--- a/src/styles/blocks/_nav.scss
+++ b/src/styles/blocks/_nav.scss
@@ -11,6 +11,10 @@
 
   &__item {
     width: 100px;
+
+    @include onDesktop {
+      width: 120px;
+    }
   }
 
   &--footer {
@@ -29,6 +33,10 @@
     color: #fff;
 
     @include hover (color, $Tblack);
+
+    @include onDesktop {
+      font-size: 20px;
+    }
 
     &--nav {
       color: $Tblack;
