--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -17,3 +17,29 @@
 @import "./blocks/subscr";
 @import "./blocks/footer";
 @import "./blocks/contacts-info";
+
+
+// .swiper {
+//   // display: block;
+//   // width: 340px;
+//   // height: 410px;
+//   padding-bottom: 40px;
+// }
+
+// .swiper-slide {
+//   display: flex;
+//   // flex-shrink: 1;
+//   // max-width: 340px;
+//   height: 543px;
+//   // margin-right: 20px;
+// }
+
+// // .swiper-slide:not(:last-of-type){
+// //   padding-right: 20px;
+// // }
+
+// .swiper-img {
+//   height: 100%;
+//   width: 100%;
+//   margin-right: 20px;
+// }
