--- a/src/styles/blocks/_button.scss
+++ b/src/styles/blocks/_button.scss
@@ -39,6 +39,7 @@
     display: flex;
     width: 50px;
     height: 50px;
+    margin-top: -1px;
     margin-right: -1px;
     background-color: $green;
     background-image: url(../images/header/button.svg);
