--- a/src/styles/blocks/_page.scss
+++ b/src/styles/blocks/_page.scss
@@ -4,7 +4,19 @@
   scroll-behavior: smooth;
 
   &__body--with-menu {
+    position: relative;
     overflow: hidden;
+
+    &::after {
+      content: "";
+      display: block;
+      position: absolute;
+      top: 0;
+      right: 0;
+      bottom: 0;
+      left: 0;
+      background-color: rgba(0,0,0,0.7);
+    }
   }
 
   &__menu {
