--- a/src/styles/blocks/events.scss
+++ b/src/styles/blocks/events.scss
@@ -84,7 +84,7 @@
       display: inline-block;
       width: 10px;
       height: 10px;
-      background-color: #f14a27;
+      background-color: $button-sub-color;
 
       margin-bottom: 2px;
 
