--- a/src/styles/blocks/header.scss
+++ b/src/styles/blocks/header.scss
@@ -167,7 +167,7 @@
 
     &:hover {
       background-color: $green-color;
-      color: #fff;
+      color: $menu-text-color;
     }
 
     @include onTablet {
@@ -191,7 +191,7 @@
 
   &__button--square {
     width: 70px;
-    height: 50px;
+    height: 49px;
     border-color: $green-color;
     background-color: $green-color;
     background-image: url("../images/arrow.svg");
@@ -199,7 +199,7 @@
     background-position: center;
 
     @include onTablet {
-      height: 70px;
+      height: 69px;
     }
   }
 }
