--- a/src/styles/blocks/lection.scss
+++ b/src/styles/blocks/lection.scss
@@ -22,7 +22,7 @@
     width: 280px;
     height: 140px;
     box-shadow: 0 2px 0 rgba(26, 90, 76, 0.25);
-    background-color: #fff;
+    background-color: $menu-text-color;
     transform: translateY(-60px);
 
     margin: 0 auto;
