--- a/src/styles/blocks/subscription.scss
+++ b/src/styles/blocks/subscription.scss
@@ -32,7 +32,7 @@
     &--title {
       @include h2Title;
       font-size: 36px;
-      color: #fff;
+      color: $menu-text-color;
 
       @include onTablet {
         font-size: 48px;
@@ -43,7 +43,7 @@
       text-align: center;
       @include font-400;
       font-size: 18px;
-      color: #fff;
+      color: $menu-text-color;
 
       margin-bottom: 50px;
     }
@@ -98,7 +98,7 @@
     &--button {
       width: 50px;
       height: 50px;
-      background-color: #f14a27;
+      background-color: $button-sub-color;
 
       background-image: url(../images/button_arrow.svg);
       background-repeat: no-repeat;
