--- a/src/styles/utils/_variables.scss
+++ b/src/styles/utils/_variables.scss
@@ -6,5 +6,6 @@ $green-color: #1a5a4c;
 $button-color-text: #0f0e08;
 $menu-text-color: #fff;
 $backround-menu: #969090;
+$button-sub-color: #f14a27;
 
 $time-animation: 0.3s;
