--- a/src/styles/blocks/icon.scss
+++ b/src/styles/blocks/icon.scss
@@ -8,14 +8,14 @@
 
   &__menu-open {
     background-image: url(../images/menu.svg);
-    margin: 32px  92px 250px 0;
+    margin: 32px  40% 250px 0;
 
     @include onTABS {
-      margin: 45px 340px 70px 0;
+      margin: 45px 50% 70px 0;
     }
 
     @include onDesktop {
-      margin: 45px 480px 150px 0;
+      margin: 45px 45% 150px 0;
     }
   }
 
