--- a/src/styles/blocks/button.scss
+++ b/src/styles/blocks/button.scss
@@ -43,6 +43,7 @@
 
   &__ticket--arrow {
     background: #1a5a4c;
+    border: none;
     width: 50px;
     height: 50px;
 
@@ -60,7 +61,9 @@
   &__ticket--arroworange {
     width: 50px;
     height: 50px;
+    border: none;
     background: #f14a27;
+    transition: all 1s;
 
     @include onTABS {
       width: 70px;
