--- a/src/styles/blocks/subscription.scss
+++ b/src/styles/blocks/subscription.scss
@@ -56,6 +56,9 @@
     display: flex;
     justify-content: center;
     box-sizing: border-box;
+    border: none;
+    outline: none;
+    transition: all 1s;
   }
 }
 
