--- a/src/styles/utils/_mixins.scss
+++ b/src/styles/utils/_mixins.scss
@@ -4,3 +4,28 @@
     #{$_property}: $_toValue;
   }
 }
+
+// or 480
+@mixin mobile {
+  @media (max-width: 640px) {
+    @content;
+  }
+}
+
+// and (max-width: 1023px)
+@mixin tablet {
+  @media (min-width: 641px) {
+    @content;
+  }
+}
+
+@mixin desktop {
+  @media (min-width: 1024px) {
+    @content;
+  }
+}
+
+// - The design 1440px
+// - Desktop 1280px
+// - Tablet 640px
+// - Mobile (> 320px)
