--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,7 +1,17 @@
+@import "reset";
+@import "functions";
 @import "utils";
 @import "fonts";
 @import "typography";
 
-body {
-  background: $c-gray;
-}
+//mimi-blocks
+@import "blocks/mini-blocks/container.scss";
+@import "blocks/mini-blocks/grid.scss";
+@import "blocks/mini-blocks/logo.scss";
+@import "blocks/mini-blocks/icon.scss";
+@import "blocks/mini-blocks/button.scss";
+
+//blocks
+@import "blocks/page.scss";
+@import "blocks/header.scss";
+@import "blocks/menu.scss";
