--- a/src/styles/utils/_extends.scss
+++ b/src/styles/utils/_extends.scss
@@ -1,4 +1,26 @@
 %h1 {
-  font-family: "Roboto", sans-serif;
-  font-weight: 400;
+  font-family: "Montserrat", sans-serif;
+  font-weight: 700;
+  font-style: normal;
+  font-size: rem(45px);
+  line-height: rem(45px);
+  text-transform: uppercase;
+
+  @include tablet {
+    font-size: rem(54px);
+    line-height: rem(65px);
+  }
+
+  @include desktop {
+    font-size: rem(72px);
+    line-height: rem(86px);
+  }
+}
+
+%events {
+  font-weight: 500;
+  font-size: rem(14px);
+  line-height: rem(14px);
+  color: #687480;
+  text-transform: uppercase;
 }
