--- a/src/styles/utils/_vars.scss
+++ b/src/styles/utils/_vars.scss
@@ -1,1 +1,7 @@
-$c-gray: #eee;
+$text-color-fff: rgb(0, 0, 0);
+$text-color-fe8: rgb(15, 14, 8);
+$color-green: rgb(26, 90, 76);
+$color-white: rgb(255, 255, 255);
+$color-white-05: rgba(255, 255, 255, 0.5);
+
+$page-font-size: 16px;
