Tempopary gallery for phone&tablet on pause

--- a/src/styles/blocks/footer.scss
+++ b/src/styles/blocks/footer.scss
@@ -5,6 +5,11 @@
     align-items: center;
     margin-bottom: 40px;
 
+    @include onTablet {
+      flex-direction: column;
+      gap: 62px;
+    }
+
     @include onDesktop {
       flex-direction: column;
       gap: 62px;
@@ -23,7 +28,7 @@
     font-style: normal;
     font-weight: 400;
     font-size: 14px;
-    line-height: 140.62%;
+    line-height: 150%;
     color: $colorBlack;
   }
 
@@ -58,6 +63,10 @@
     margin-bottom: 40px;
 
     background: rgba(26, 90, 76, 0.5);
+
+    @include onTablet {
+      margin-bottom: 64px;
+    }
 
     @include onDesktop {
       width: 1px;
