--- a/src/styles/blocks/menu.scss
+++ b/src/styles/blocks/menu.scss
@@ -21,7 +21,6 @@
   &__list {
     list-style: none;
     padding: 0;
-
   }
 
   &__item {
@@ -59,6 +58,10 @@
     margin: 0 auto;
     background-color: $colorWhite;
     opacity: 50%;
+
+    @include onTablet {
+      display: inline-block;
+    }
 
     @include onDesktop {
       display: inline-block;
