--- a/src/styles/blocks/page.scss
+++ b/src/styles/blocks/page.scss
@@ -1,4 +1,6 @@
 .page {
+  scroll-behavior: smooth;
+
   &__body {
     margin: 0;
   }
@@ -8,6 +10,7 @@
     top: 0;
     left: 0;
     right: 0;
+    z-index: 100;
 
     transform: translateX(-100%);
     transition: transform 0.3s;
@@ -37,7 +40,16 @@
     text-align: center;
     color: $colorBlack;
 
+    @include onTablet {
+      margin-bottom: 48px;
+
+      font-size: 48px;
+      text-align: left;
+    }
+
     @include onDesktop {
+      margin-bottom: 56px;
+
       font-size: 48px;
       text-align: left;
     }
