--- a/src/styles/blocks/container.scss
+++ b/src/styles/blocks/container.scss
@@ -4,6 +4,10 @@
   margin: 0 auto;
   padding: 0 20px;
 
+  @include onTablet {
+    padding: 0 37px;
+  }
+
   @include onDesktop {
     padding: 0 56px;
   }
