--- a/src/styles/blocks/icon.scss
+++ b/src/styles/blocks/icon.scss
@@ -1,8 +1,8 @@
 .icon {
   display: block;
   position: relative;
-  height: 24px;
-  width: 24px;
+  height: 20px;
+  width: 20px;
 
   background-size: cover;
   background-position: center;
@@ -18,7 +18,7 @@
   }
 
   &--cross {
-    background-image: url(../images/close.png);
+    background-image: url(../images/closesvg.svg);
 
     @include onDesktop {
       position: relative;
