--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -11,4 +11,7 @@
 @import "./blocks/grid.scss";
 @import "./blocks/schedule.scss";
 @import "./blocks/event.scss";
+@import "./blocks/gallery.scss";
+/*@import "./blocks/swiper.scss";*/
+@import "./blocks/subscribe.scss";
 @import "./blocks/footer.scss";
