--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,7 +1,13 @@
-@import "utils";
-@import "fonts";
-@import "typography";
+@import "./utils/normalize";
+@import "./utils/variables";
+@import "./utils/mixins";
+@import "./utils/fonts";
 
-body {
-  background: $c-gray;
-}
+@import "./blocks/container.scss";
+@import "./blocks/grid.scss";
+
+@import "./blocks/icon.scss";
+@import "./blocks/logo.scss";
+@import "./blocks/header.scss";
+@import "./blocks/top-actions.scss";
+@import "./blocks/button.scss";
