--- a/src/styles/utils/_extends.scss
+++ b/src/styles/utils/_extends.scss
@@ -1,4 +1,35 @@
-%h1 {
-  font-family: "Roboto", sans-serif;
+%montserrat-bold {
+  font-family: "Montserrat", sans-serif;
+  font-weight: 700;
+}
+
+%montserrat-regular {
+  font-family: "Montserrat", sans-serif;
   font-weight: 400;
+}
+
+%text-menu {
+  font-weight: 400;
+  font-size: 14px;
+  line-height: 140.62%;
+  color: $c-white;
+}
+
+%title-main {
+  margin-bottom: 40px;
+
+  @extend %montserrat-bold;
+
+  font-size: 36px;
+  color: $c-black;
+  text-align: center;
+
+  @include onTablet {
+    margin-bottom: 48px;
+    font-size: 48px;
+    text-align: left;
+  }
+  @include onDesktop {
+    margin-bottom: 56px;
+  }
 }
