--- a/src/styles/utils/_vars.scss
+++ b/src/styles/utils/_vars.scss
@@ -1,1 +1,6 @@
-$c-gray: #eee;
+$c-green: #1a5a4c;
+$c-orange: #f14a27;
+$c-black: #0f0e08;
+$c-white: #fff;
+$c-grey: #687480;
+$c-darkGrey: #4e4e4e;
