--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,7 +1,20 @@
 @import "utils";
-@import "fonts";
-@import "typography";
 
-body {
-  background: $c-gray;
-}
+@import "blocks/page.scss";
+@import "blocks/container.scss";
+@import "blocks/header.scss";
+@import "blocks/logo.scss";
+@import "blocks/menu.scss";
+@import "blocks/nav-menu.scss";
+@import "blocks/schedule-menu.scss";
+@import "blocks/events.scss";
+@import "blocks/scheduly-events.scss";
+@import "blocks/subtitle-events.scss";
+@import "blocks/classicism.scss";
+@import "blocks/gallery.scss";
+@import "blocks/subscription.scss";
+@import "blocks/form-field.scss";
+@import "blocks/button.scss";
+@import "blocks/footer.scss";
+@import "blocks/social.scss";
+@import "blocks/contact-us.scss";
