--- a/src/styles/blocks/top-actions.scss
+++ b/src/styles/blocks/top-actions.scss
@@ -1,18 +1,15 @@
 .top-actions {
   display: grid;
-  grid-template-columns: 24px 1fr 24px;
+  grid-template-columns: 24px 1fr;
   justify-items: center;
   align-items: center;
-  
   padding-top: 8px;
 
   @include onTablet {
-    grid-template-columns: repeat(6, 90px);
-    column-gap: 30px;
+    grid-column: 1 / 7;
   }
 
   @include onDesktop {
-    grid-template-columns: repeat(12, 70px);
-    column-gap: 30px;
+    grid-column: 1 / 13;
   }
 }
