--- a/src/styles/blocks/icon.scss
+++ b/src/styles/blocks/icon.scss
@@ -1,7 +1,7 @@
 .icon {
   display: block;
-  width: 24px;
-  height: 24px;
+  width: 100%;
+  padding-bottom: 100%;
 
   background-position: center;
   background-repeat: no-repeat;
