--- a/src/styles/blocks/logo.scss
+++ b/src/styles/blocks/logo.scss
@@ -1,21 +1,15 @@
 .logo {
-  display: block;
-  width: 55px;
-  height: 61px;
 
-  background-image: url(/images/logo.svg);
-  background-position: center;
-  background-repeat: no-repeat;
-  background-size: contain;
-
-  @include onTablet {
+  &__image {
     display: block;
-    grid-column: 4 / 6;
-    height: 72px;
-  }
+    height: 61px;
 
-  @include onDesktop {
-    grid-column: 6 / 8;
-    height: 72px;
+    @include onTablet {
+      height: 72px;
+    }
+
+    @include onDesktop {
+      height: 72px;
+    }
   }
 }
