--- a/src/styles/blocks/header.scss
+++ b/src/styles/blocks/header.scss
@@ -1,28 +1,21 @@
 .header {
-  background-image: url("../images/1.png");
-  background-size: cover;
-  background-repeat: no-repeat;
-  background-position: 100% center;
-  position: relative;
-
-  height: 300px;
-
-  &__content {
-    display: flex;
-    flex-direction: column-reverse;
-
-    @include tablet {
-      display: grid;
-    }
-  }
-
   @include tablet {
-    background-size: contain;
     height: 384px;
   }
 
   @include desktop {
     height: 655px;
+  }
+
+  &__content {
+    display: flex;
+    flex-direction: column-reverse;
+    position: relative;
+    height: 100%;
+
+    @include tablet {
+      display: grid;
+    }
   }
 
   &__icon-menu {
@@ -89,9 +82,37 @@
     grid-row: 1 / 3;
   }
 
+  &__background {
+    position: absolute;
+    width: 100%;
+    height: 300px;
+
+    z-index: -1;
+
+    @include tablet {
+      height: 384px;
+    }
+
+    @include desktop {
+      height: 655px;
+    }
+
+    & img {
+      object-position: left;
+      width: 100%;
+      height: 100%;
+      object-fit: cover;
+      overflow-x: visible;
+
+      @include mobile {
+        margin-left: -20px;
+        width: calc(100% + 40px);
+      }
+    }
+  }
+
   &__logo {
     position: absolute;
-    display: block;
     margin: 10px auto;
     left: 0;
     right: 0;
