--- a/src/styles/blocks/page.scss
+++ b/src/styles/blocks/page.scss
@@ -2,4 +2,19 @@
   max-width: 1280px;
   margin: 0 auto;
   font-size: $page-font-size;
+  transition: all 1s;
+
+  &__body {
+    transition: all 1s;
+  }
+
+  &--background::after {
+    content: "";
+    width: 100%;
+    height: 100%;
+    position: fixed;
+    top: 0;
+    left: 0;
+    background: rgba(24, 24, 26, 0.5);
+  }
 }
