--- a/src/styles/blocks/_page.scss
+++ b/src/styles/blocks/_page.scss
@@ -3,22 +3,6 @@
   margin: 0 auto;
   scroll-behavior: smooth;
 
-  &__body--with-menu {
-    position: relative;
-    overflow: hidden;
-
-    &::after {
-      content: "";
-      display: block;
-      position: absolute;
-      top: 0;
-      right: 0;
-      bottom: 0;
-      left: 0;
-      background-color: rgba(0,0,0,0.7);
-    }
-  }
-
   &__menu {
     position: absolute;
     top: 0;
@@ -42,5 +26,22 @@
       text-align: left;
     }
   }
-  
+
+  // sroll-menu
+  &__body--with-menu {
+    position: relative;
+    overflow: hidden;
+
+    &::after {
+      content: "";
+      display: block;
+      position: absolute;
+      top: 0;
+      right: 0;
+      bottom: 0;
+      left: 0;
+      background-color: rgba(0,0,0,0.7);
+    }
+  }
+
 }
