--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -17,6 +17,7 @@
 @import "./blocks/event.scss";
 @import "./blocks/lecture.scss";
 @import "./blocks/gallery.scss";
+@import "./blocks/slider.scss";
 @import "./blocks/subscription.scss";
 @import "./blocks/footer.scss";
 @import "./blocks/contacts.scss";
