update header button

--- a/src/styles/blocks/header.scss
+++ b/src/styles/blocks/header.scss
@@ -49,30 +49,11 @@
     }
   }
 
-  &__ticket {
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    width: 100%;
-    height: 50px;
-
-    border: 1px solid $color-green;
-    background-color: $color-white;
-    color: $text-color-fe8;
-
-    &--name {
-      text-align: center;
-      flex: 1 1 auto;
-    }
-
-    @include tablet {
-      height: 70px;
-      width: 270px;
-    }
-
+  &__button {
     @include mobile {
       order: -1;
     }
+
   }
 
   &__image {
