--- a/src/styles/_reset.scss
+++ b/src/styles/_reset.scss
@@ -1,5 +1,6 @@
 * {
   box-sizing: border-box;
+  cursor: default;
 }
 
 body,
@@ -20,6 +21,7 @@ ul {
 a {
   color: inherit;
   text-decoration: none;
+  cursor: pointer;
 }
 
 input,
