--- a/src/styles/blocks/mini-blocks/button.scss
+++ b/src/styles/blocks/mini-blocks/button.scss
@@ -1,22 +1,34 @@
 .button {
-  display: inline-block;
-  color: $color-white;
-  background-image: url("../images/icons/btn.svg");
-  background-repeat: no-repeat;
-  background-position: center;
-  height: 100%;
-  width: 50px;
+  border: 1px solid $color-green;
+  display: flex;
+
+  align-items: center;
+  height: 50px;
 
   @include tablet {
-    width: 70px;
+    max-width: 270px;
+    height: 70px;
   }
 
-  &--green {
-    background-color: $color-green;
+  &__name {
+    flex: 1 1 200px;
 
-    &:hover {
-      background-color: rgb(55, 160, 137);
-      background-image: url("../images/icons/btn-hover.svg");
+    text-align: center;
+    color: $text-color-fe8;
+    background-color: #fff;
+  }
+
+  &__img {
+    width: 50px;
+
+    @include tablet {
+      width: 70px;
     }
+
+    height: 100%;
+    background-color: $color-green;
+    display: flex;
+    align-items: center;
+    justify-content: center;
   }
 }
