--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -15,3 +15,12 @@
 /*@import "./blocks/swiper.scss";*/
 @import "./blocks/subscribe.scss";
 @import "./blocks/footer.scss";
+
+input:-webkit-autofill,
+input:-webkit-autofill:hover,
+input:-webkit-autofill:focus {
+  border: 1px solid black;
+  -webkit-text-fill-color: black;
+  -webkit-box-shadow: inset 0 0 300px -23px rgba(235,225,29,0.66);
+  transition: 0.5s;
+}
