Fixed! Thanx god i found icon button with arrow

--- a/src/styles/blocks/header.scss
+++ b/src/styles/blocks/header.scss
@@ -101,10 +101,10 @@
 
     transition: all 0.3s;
 
-    background-image: url(../images/greenqua.svg);
-    background-size: contain;
+    background-image: url(../images/greenbutton.svg);
     background-position: right;
     background-repeat: no-repeat;
+    background-size: contain;
 
     &:hover {
       background-color: $colorGreen;
