--- a/src/styles/blocks/page.scss
+++ b/src/styles/blocks/page.scss
@@ -2,7 +2,12 @@
   scroll-behavior: smooth;
 
   &__body {
+    overflow-x: hidden;
     margin: 0;
+
+    &--with-menu {
+      overflow: hidden;
+    }
   }
 
   &__menu {
