--- a/src/styles/blocks/subscribe.scss
+++ b/src/styles/blocks/subscribe.scss
@@ -101,17 +101,12 @@
     width: 50px;
     height: 50px;
 
-    background-image: url(../images/redqua.svg);
+    background-image: url(../images/redbutton.svg);
     background-position: center;
     background-size: cover;
     border: none;
     transition: all 0.3s;
     cursor: pointer;
-
-    &::after {
-      content: "➤";
-      position: relative;
-    }
 
     &:hover {
       transform: scale(1.15);
