--- a/src/styles/blocks/icon.scss
+++ b/src/styles/blocks/icon.scss
@@ -10,4 +10,8 @@
   &--menu {
     background-image: url(/images/icons/menu.svg);
   }
+
+  &--cross {
+    background-image: url(/images/icons/cross.svg);
+  }
 }
