--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -11,3 +11,4 @@
 @import "./blocks/header.scss";
 @import "./blocks/top-actions.scss";
 @import "./blocks/button.scss";
+@import "./blocks/menu.scss";
