--- a/src/styles/blocks/top-actions.scss
+++ b/src/styles/blocks/top-actions.scss
@@ -6,9 +6,11 @@
 
   @include onTablet {
     grid-column: 1 / 7;
+    padding-top: 15px;
   }
 
   @include onDesktop {
     grid-column: 1 / 13;
+    padding-top: 15px;
   }
 }
