--- a/src/styles/blocks/menu.scss
+++ b/src/styles/blocks/menu.scss
@@ -33,6 +33,8 @@
     @include onTablet {
       gap: 38px;
       border-bottom: none;
+      margin-bottom: 0;
+      padding-bottom: 24px;
       padding-right: 38px;
       border-right: 1px solid rgba(255, 255, 255, 0.5) ;
     }
