--- a/src/styles/blocks/menu.scss
+++ b/src/styles/blocks/menu.scss
@@ -1,13 +1,17 @@
 .menu {
-  padding: 28px 0;
-  background-color: $c-green;
 
-  @include onTablet {
-    padding: 40px 0;
-  }
+  &__box {
+    padding: 28px 0;
+    background-color: $c-green;
 
-  @include onDesktop {
-    padding: 40px 0 48px;
+    @include onTablet {
+      padding: 40px 0;
+    }
+
+    @include onDesktop {
+      padding: 40px 0 48px;
+    }
+
   }
 
   &__container {
