--- a/src/styles/blocks/page.scss
+++ b/src/styles/blocks/page.scss
@@ -2,7 +2,7 @@
   scroll-behavior: smooth;
 
   &__body {
-    background-color: #e5e5e5;
+    background-color: $c-white;
     font-family: "IBM Plex Sans", sans-serif;
     line-height: 1;
 
@@ -16,11 +16,14 @@
     top: 0;
     left: 0;
     right: 0;
+    height: 100vh;
+    
     transform: translateY(-100%);
     transition: transform 0.3s;
 
     &:target {
       transform: translateY(0);
+
     }
   }
 
