--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,7 +1,21 @@
 @import "utils";
-@import "fonts";
-@import "typography";
 
-body {
-  background: $c-gray;
+@import "blocks/page";
+@import "blocks/container";
+@import "blocks/logo";
+@import "blocks/work-schedule";
+@import "blocks/date";
+@import "blocks/menu";
+@import "blocks/header";
+@import "blocks/museum-art";
+@import "blocks/exhibitions";
+@import "blocks/lectures";
+@import "blocks/gallery";
+@import "blocks/subscription";
+@import "blocks/footer";
+
+* {
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
 }
