--- a/src/styles/blocks/menu.scss
+++ b/src/styles/blocks/menu.scss
@@ -1,8 +1,47 @@
 .menu {
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+
+  transform: translateY(-100%);
+
   height: 400px;
   padding: 27px 0;
 
   background-color: $colorGreen;
+  transition: all $animationDuration;
+
+  &:target {
+    transform: translateY(0);
+  }
+
+  // &::after {
+  //   position: absolute;
+  //   top: 400px;
+
+  //   display: block;
+  //   content: "";
+  //   width: 100vw;
+  //   height: 100vh;
+
+  //   // transform: translateY(-100%);
+
+  //   background-color: $menuDarkColor;
+  //   opacity: 0.5;
+
+  //   &::after:target {
+  //     transform: translateY(100%);
+  //   }
+
+  //   @include onTablet {
+  //     top: 225px;
+  //   }
+
+  //   @include onDesktop {
+  //     top: 235px;
+  //   }
+  // }
 
   @include onTablet {
     height: 225px;
@@ -23,7 +62,41 @@
     }
 
     @include onDesktop {
-      grid-column: 1 / 6;
+      grid-column: 1 / 7;
+    }
+
+    &::after {
+      grid-column: 1 / 3;
+      margin-top: 24px;
+
+      display: block;
+      content: "";
+      width: 100%;
+      height: 1px;
+
+      background-color: $separatorColor;
+
+      @include onTablet {
+        grid-column: 3 / 3;
+        margin-top: 0;
+
+        position: relative;
+        right: 20px;
+
+        height: 100%;
+        width: 1px;
+      }
+
+      @include onDesktop {
+        grid-column: 7 / 7;
+        margin-top: 0;
+
+        position: relative;
+        left: 30px;
+
+        height: 100%;
+        width: 1px;
+      }
     }
   }
 
@@ -74,31 +147,6 @@
       line-height: 100%;
 
       color: $colorWhite;
-    }
-  }
-
-  &__separator {
-    margin-top: 24px;
-    width: 100%;
-    height: 1px;
-
-    background-color: $separatorColor;
-
-    @include onTablet {
-      margin-top: 0;
-      // margin-right: 38px;
-
-      width: 1px;
-      height: 100%;
-      // display: none;
-    }
-
-    @include onDesktop {
-      grid-column: 7 / 7;
-      margin-top: 0;
-
-      width: 1px;
-      height: 100%;
     }
   }
 
