changes landing NU MU

--- a/src/styles/blocks/gallery.scss
+++ b/src/styles/blocks/gallery.scss
@@ -61,6 +61,8 @@
     display: grid;
     height: 410px;
     width: 100%;
+    object-position: top;
+    object-fit: cover;
 
     &:nth-child(2) {
       display: none;
