fixed the issues

--- a/src/styles/blocks/footer.scss
+++ b/src/styles/blocks/footer.scss
@@ -99,23 +99,35 @@
   }
 
   &__contact {
-    max-width: 200px;
-
     font-style: normal;
-    font-weight: 400;
-    font-size: 14px;
-    line-height: 150%;
 
-    & > :not(:last-child) {
-      margin-bottom: 20px;
-    }
+    &-container {
+      max-width: 200px;
+      font-style: normal;
+      font-weight: 400;
+      font-size: 14px;
+      line-height: 150%;
 
-    @include onDesktop {
-      width: 175px;
+      & > :not(:last-child) {
+        margin-bottom: 20px;
+      }
+
+      @include onDesktop {
+        width: 175px;
+      }
     }
 
     &-title {
       line-height: 140.62%;
+    }
+
+    &-link {
+      color: #0f0e08;
+      text-decoration: none;
+
+      &:hover {
+        color: #5e5e5e;
+      }
     }
   }
 
@@ -184,6 +196,10 @@
       line-height: 100%;
       text-decoration: none;
       color: #0f0e08;
+
+      &:hover {
+        color: #5e5e5e;
+      }
     }
   }
 
