--- a/src/styles/blocks/icon.scss
+++ b/src/styles/blocks/icon.scss
@@ -1,7 +1,7 @@
 .icon {
   display: block;
-  width: 100%;
-  padding-bottom: 100%;
+  width: 24px;
+  height: 24px;
 
   background-position: center;
   background-repeat: no-repeat;
@@ -13,5 +13,14 @@
 
   &--cross {
     background-image: url(/images/icons/cross.svg);
+    background-position: top center;
+  }
+
+  &--instagram {
+    background-image: url(/images/icons/instagram.svg);
+  }
+
+  &--facebook {
+    background-image: url(/images/icons/facebook.svg);
   }
 }
