--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -5,10 +5,13 @@
 
 @import "./blocks/container.scss";
 @import "./blocks/grid.scss";
+@import "./blocks/page.scss";
 
 @import "./blocks/icon.scss";
-@import "./blocks/logo.scss";
+
 @import "./blocks/header.scss";
-@import "./blocks/top-actions.scss";
 @import "./blocks/button.scss";
 @import "./blocks/menu.scss";
+
+@import "./blocks/current-events.scss";
+@import "./blocks/lecture.scss";
