--- a/src/styles/utils/_variables.scss
+++ b/src/styles/utils/_variables.scss
@@ -2,6 +2,7 @@ $colorGreen: #1a5a4c;
 $colorOrange: #f14a27;
 $colorGray: #687480;
 $separatorColor: rgba(255, 255, 255, 0.5);
+$secondaryColor: #4e4e4e;
 $colorDarkGray: #d7dde3;
 $colorBlack: #000;
 $colorBlackSecond: #0f0e08;
