--- a/src/styles/blocks/contacts-us.scss
+++ b/src/styles/blocks/contacts-us.scss
@@ -12,6 +12,11 @@
     }
   }
 
+  &__face-link {
+    width: 10px;
+    height: 10px;
+  }
+
   &__links {
     display: flex;
     justify-content: space-between;
