--- a/src/styles/blocks/contacts-us.scss
+++ b/src/styles/blocks/contacts-us.scss
@@ -4,7 +4,7 @@
   &__content {
     @include onTablets {
       display: flex;
-      gap: 20px;
+      gap: 40px;
     }
 
     @include onDesktop {
@@ -12,9 +12,24 @@
     }
   }
 
-  &__face-link {
-    width: 10px;
-    height: 10px;
+  &__face-img {
+    width: 12px;
+    height: 24px;
+    background-image: url(../images/Facebook.png);
+    &:hover {
+      background-color: #1a5a4c;
+      box-shadow: 0px 0px 12px 10px #1a5a4c;
+    }
+  }
+
+  &__insta-img {
+    width: 24px;
+    height: 24px;
+    background-image: url(../images/instagram.png);
+    &:hover {
+      background-color: #1a5a4c;
+      box-shadow: 0px 0px 12px 10px #1a5a4c;
+    }
   }
 
   &__links {
@@ -62,7 +77,7 @@
 
   &__navigation {
     @include onDesktop {
-      padding: 0 65px;
+      padding-left: 65px;
     }
   }
 
@@ -73,7 +88,7 @@
     @include image;
     position: absolute;
     bottom: 20px;
-    right: 0;
+    right: 0px;
 
     @include onTablets {
       display: none;
