--- a/src/styles/blocks/header.scss
+++ b/src/styles/blocks/header.scss
@@ -14,6 +14,11 @@
     @include onTablets {
       display: flex;
     }
+
+    @include onDesktop {
+      margin: 0 auto;
+    }
+
   }
 
   &__menu {
@@ -38,13 +43,14 @@
     @include image;
     background-position: left;
     @include onTablets {
-      width: 374px;
+      width: 50%;
       height: 384px;
       order: 2;
     }
 
     @include onDesktop {
-      width: 725px;
+      // width: 725px;
+      flex-grow: 1;
       height: 655px;
     }
   }
@@ -102,6 +108,12 @@
     text-decoration: none;
     cursor: pointer;
     border: 1px solid #1a5a4c;
+    transition: 0.3s linear;
+
+    &:hover {
+      background-color: #1a5a4c;
+      font-weight: bold;
+    }
 
     @include onTablets {
       width: 270px;
