--- a/src/styles/blocks/navigation.scss
+++ b/src/styles/blocks/navigation.scss
@@ -1,15 +1,40 @@
 .navigation {
   &__list {
     display: flex;
-    gap: 20px;
+    column-gap: 28px;
+    row-gap: 24px;
     flex-wrap: wrap;
     margin: 0;
     padding: 0;
+
+    &--footer {
+      gap: 20px;
+      width: 280px;
+      @include onTablets {
+        width: 460px;
+      }
+
+      @include onDesktop {
+        width: 382px;
+      }
+    }
   }
 
   &__item {
     list-style: none;
-    width: 45%;
+    width: 40%;
+
+    &--footer {
+      width: 130px;
+
+      @include onTablets {
+        width: 220px;
+      }
+
+      @include onDesktop {
+        width: 170px;
+      }
+    }
   }
 
   &__link {
@@ -20,6 +45,11 @@
     font-size: 14px;
     line-height: 14px;
     color: #0f0e08;
+
+    &:hover {
+      text-shadow: -1px -4px 3px #1a5a4c;
+      font-weight: bold;
+    }
 
     &--color_white {
       color: #fff;
