--- a/src/styles/blocks/gallery.scss
+++ b/src/styles/blocks/gallery.scss
@@ -12,6 +12,7 @@
   &__photos-container {
     display: flex;
     flex-wrap: nowrap;
+    justify-content: center;
     gap: 20px;
     margin: 0 0 20px;
 
