--- a/src/styles/blocks/working-time.scss
+++ b/src/styles/blocks/working-time.scss
@@ -7,7 +7,10 @@
   color: #0f0e08;
 
   &--contact-us {
-    width: 220px;
+    width: 130px;
+    @include onTablets {
+      width: 220px;
+    }
   }
 
   &--color_white {
