--- a/src/styles/blocks/contacts-us.scss
+++ b/src/styles/blocks/contacts-us.scss
@@ -18,7 +18,7 @@
     background-image: url(../images/Facebook.png);
     &:hover {
       background-color: #1a5a4c;
-      box-shadow: 0px 0px 12px 10px #1a5a4c;
+      box-shadow: 0 0 12px 10px #1a5a4c;
     }
   }
 
@@ -28,7 +28,7 @@
     background-image: url(../images/instagram.png);
     &:hover {
       background-color: #1a5a4c;
-      box-shadow: 0px 0px 12px 10px #1a5a4c;
+      box-shadow: 0 0 12px 10px #1a5a4c;
     }
   }
 
@@ -88,7 +88,7 @@
     @include image;
     position: absolute;
     bottom: 20px;
-    right: 0px;
+    right: 0;
 
     @include onTablets {
       display: none;
