--- a/src/styles/blocks/contacts-us.scss
+++ b/src/styles/blocks/contacts-us.scss
@@ -55,6 +55,14 @@
   &__link-container {
     display: flex;
     gap: 26px;
+
+    @include onTablets {
+      gap: 38px;
+    }
+
+    @include onDesktop {
+      gap: 28px;
+    }
   }
 
   &__information {
