--- a/src/styles/blocks/header.scss
+++ b/src/styles/blocks/header.scss
@@ -49,7 +49,6 @@
     }
 
     @include onDesktop {
-      // width: 725px;
       flex-grow: 1;
       height: 655px;
     }
@@ -96,7 +95,9 @@
   &__link {
     display: flex;
     align-items: center;
-    justify-content: flex-end;
+    justify-content: space-between;
+    padding-left: 80px;
+    box-sizing: border-box;
     width: 100%;
     font-family: "IBM Plex Sans", sans-serif;
     font-weight: 500;
@@ -112,6 +113,7 @@
 
     &:hover {
       background-color: #1a5a4c;
+      color: #fff;
       font-weight: bold;
     }
 
@@ -125,11 +127,13 @@
 
     &::after {
       content: ">";
+      @include image;
       width: 50px;
       height: 50px;
       text-align: center;
-      margin-left: 80px;
       line-height: 50px;
+      color: #fff;
+      font-weight: bold;
       background-color: #1a5a4c;
     }
   }
