--- a/src/styles/blocks/navigation.scss
+++ b/src/styles/blocks/navigation.scss
@@ -51,8 +51,9 @@
       font-weight: bold;
     }
 
-    &--color_white {
+    &--header {
       color: #fff;
+      font-weight: 500;
     }
   }
 }
